# vibe-coding-health-project

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  deploy-setup.sh  docker-compose.prod.yml  docker-compose.yml  h_category.sql  h_entry.sql  h_entry_ship.sql  setup-macos.sh
.claude/memory/: MEMORY.md  project_overview.md
.github/workflows/: deploy.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/admin/: __init__.py  config.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  auth.py  categories.py  entries.py  results.py  titles.py  user_entries.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  category.py  entry.py  user.py  user_entry.py
backend/app/schemas/: __init__.py  category.py  entry.py  result.py  title.py  user.py  user_entry.py
backend/app/services/: __init__.py  result_service.py  user_entry_service.py
backend/app/static/: admin.html
backend/scripts/: create_admin.py
docs/superpowers/plans/: 2026-05-04-health-system-implementation.md  2026-05-05-frontend-redesign.md  2026-05-06-frontend-code-refactor-plan.md  2026-05-06-frontend-optimization.md  2026-05-06-result-api-graph-data-plan.md  2026-05-06-result-api-refactor.md  (+1 more)
frontend/: .eslintrc.cjs  .gitignore  .lintstagedrc.json  .stylelintrc.json  Dockerfile  Dockerfile.dev  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  index.css  main.tsx
(+47 files in other folders)
